# AM-Workbench

./: .env.example  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  NOTICE  PUBLIC_EXPORT_MANIFEST.json  README.md  THIRD-PARTY-LICENSES.md  clippy.toml  deny.toml  docker-compose.yml  project.yaml  pyproject.toml  pyrightconfig.json  python.cmd  requirements-engine-ci.in  requirements-engine-ci.txt  requirements-lock.txt  requirements.txt  spdx.json  start-vllm-wsl.ps1  start.bat  stop-vllm-wsl.ps1  vetinari.yaml  vetinari_benchmarks.jsonl
.github/: actionlint.yaml
config/: agent_memory_profiles.yaml  agent_model_defaults.yaml  agent_routing_policy.yaml  backend_parity_rubric.yaml  backend_pins.yaml  backend_tuning.yaml  capabilities.yaml  capability_completeness_rubric.yaml  capability_parity_rubric.yaml  category_leadership_rubric.yaml  cloud_providers.yaml  compute_routing.yaml  coverage_gates.yaml  cpu_tier.yaml  dead_code_reconciliation.yaml  delegation_model_fallbacks.yaml  dependency_sources.yaml  error_messages.yaml  foreman_shard_critique.yaml  gateway_policy.yaml  glossary.yaml  governance_language_coverage.yaml  hook_runtime.yaml  inference_profiles.yaml  intake_tree.yaml  integration_matrix.yaml  known_debt.yaml  llamacpp_engine_defaults.yaml  memory_cache_defaults.yaml  ml_config.yaml  model_constants.yaml  model_families.yaml  model_pricing.yaml  model_subscription_quotas.yaml  models.yaml  natural_extensions_catalog.yaml  network_policy.yaml  overlays.example.yaml  persona_bundles.yaml  privacy_boundary_allowlist.json  (+22 more)
crates/amw-engine/: Cargo.toml  ENGINE_THIRD_PARTY_LICENSES.md  NOTICE  VENDORING.md  build.rs
crates/amw-engine/converter/: dependency-licenses.toml  requirements-convert_lora_to_gguf.in  requirements-convert_lora_to_gguf.txt
crates/amw-engine/fuzz/: .gitignore  Cargo.toml
crates/amw-engine/fuzz/corpus/gbnf_compile/: alternation-and-repeat.seed  invalid-rule.seed  valid-root.seed
crates/amw-engine/fuzz/fuzz_targets/: api_parser.rs  gbnf_compile.rs  gguf_meta.rs
crates/amw-engine/src/: config.rs  lib.rs  runtime.rs  watchdog.rs
crates/amw-engine/src/api/: admin.rs  auth.rs  dto.rs  error.rs  health.rs  mod.rs  model_catalog.rs  openai.rs
crates/amw-engine/src/ffi/: exception_firewall.cpp  exception_firewall.h  mod.rs  safe.rs  sys.rs
crates/amw-engine/src/hw/: budget.rs  devices.rs  mod.rs
crates/amw-engine/src/receipt/: canonical.rs  ledger.rs  mod.rs  pkcs11.rs  signer.rs
crates/amw-engine/src/sched/: batch_loop.rs  core.rs  kv.rs  mod.rs  prefix.rs  queue.rs  slots.rs
crates/amw-engine/src/store/: adapter.rs  gguf_meta.rs  loader.rs  lora.rs  mod.rs  registry.rs  scan.rs  session.rs  template.rs
crates/amw-engine/src/telemetry/: events.rs  logging.rs  metrics.rs  mod.rs  ring.rs
crates/amw-engine/tests/: config_contract.rs  config_fixture.toml  eval_receipt_api.rs  eval_receipt_contract.rs  exit_codes.rs  ffi_contract.rs  gen_embed.rs  gen_execution.rs  gen_grammar.rs  gen_infill.rs  gen_infill_native.rs  gen_logprobs.rs  gen_native.rs  gen_sampler.rs  gen_sparse_attention.rs  gen_spec.rs  gen_spec_native.rs  gen_stop.rs  gen_stream.rs  hw_store_contract.rs  sched_concurrency.rs  sched_kv_slots.rs  session_store_contract.rs  store_runtime_contract.rs  telemetry_capacity.rs
crates/amw-engine/tests/fixtures/: corrupt-header.gguf  make_known_bad_fixtures.py  tiny-cpu.gguf  truncated-tensor.gguf
crates/amw-kernel/: Cargo.toml
crates/amw-kernel/src/: engine_runtime.rs  lib.rs
crates/amw-kernel/src/api/: mod.rs
crates/amw-kernel/src/api/routes/: engine_proxy.rs  mod.rs  workbench_domains.rs
crates/amw-kernel/src/extensions/: mod.rs
crates/amw-kernel/src/files/: mod.rs
crates/amw-kernel/src/ipc/: mod.rs
crates/amw-kernel/src/mcp/: mod.rs
crates/amw-kernel/src/resource_cockpit/: mod.rs
crates/amw-kernel/src/resources/: mod.rs
crates/amw-kernel/src/run_kernel/: mod.rs
crates/amw-kernel/src/sandbox/: mod.rs
crates/amw-kernel/src/scheduler/: mod.rs
crates/amw-kernel/src/spine/: mod.rs
crates/amw-kernel/src/storage/: mod.rs
crates/amw-kernel/src/workbench_surfaces/: mod.rs
crates/amw-test-support/: Cargo.toml
crates/amw-test-support/src/: lib.rs
deploy/: Dockerfile  docker-compose.otel.yaml  vetinari.service
docs/: product-thesis.md
examples/: analytics_example.py  dashboard_example.py
installer/: README.md  package_preflight.py  update_manifest.schema.json
manifest/: vetinari.yaml
schemas/: README.md  aks_bundle_compat.schema.json  amw-foundation-contract.schema.json  amw-kernel-lifecycle.schema.json  amw-protocol-receipt.schema.json  ide_extension.schema.json  inference_quality_rubric.schema.json  language_boundary.schema.json  shard.schema.json  workbench_adapter_authority.schema.json  workbench_adaptive_tuning.schema.json  workbench_agent_card.schema.json  workbench_agent_mailbox.schema.json  workbench_agent_route_decision.schema.json  workbench_agent_run_harness.schema.json  workbench_agent_watcher.schema.json  workbench_ai_bundle.schema.json  workbench_anti_sycophancy_eval.schema.json  workbench_approval_chain.schema.json  workbench_approval_diff.schema.json  workbench_artifact_pair.schema.json  workbench_artifact_review.schema.json  workbench_automation.schema.json  workbench_automation_asset.schema.json  workbench_automation_shadow.schema.json  workbench_card.schema.json  workbench_channel.schema.json  workbench_cohesion_canary.schema.json  workbench_cohesion_eval.schema.json  workbench_command_safety.schema.json  workbench_competitive_drift.schema.json  workbench_context_asset.schema.json  workbench_context_enrichment.schema.json  workbench_conversation.schema.json  workbench_correction.schema.json  workbench_cost_plan.schema.json  workbench_creative_world.schema.json  workbench_data_quality.schema.json  (+69 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: amw-workbench-main.json
src-tauri/permissions/: amw-workbench-commands.toml
src-tauri/src/: commands.rs  lib.rs  lifecycle.rs  main.rs
src-tauri/tests/: tauri_contracts.rs
(+2388 files in other folders)
