[package]
name = "amw-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.7"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
tower = "0.5"
