[package]
name = "amw-test-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
amw-kernel = { path = "../amw-kernel", version = "0.1.0" }
amw-protocol = { path = "../amw-protocol", version = "0.1.0" }

[lib]
path = "src/lib.rs"
